2007-07-14  Marek Habersack  <grendello@gmail.com>

	* src/mod_mono.c (do_command): added error logging
	(write_data): as above
	(read_data): as above

	* src/mod_mono.h (STATCODE_AND_SERVER): new macro to add support
	for non-zero status codes (the status code is ignored for Apache <
	2.0).

2007-06-20  Marek Habersack  <grendello@gmail.com>

	* src/mod_mono.c (send_initial_data): added support for
	ServerAlias directive. Patch from Juraj Skripsky
	<juraj@hotfeet.ch>, thanks! Closes bug #81878.

2007-04-19  Wade Berrier  <wberrier@novell.com>

	* configure.in: Version bump -> 1.2.4

2007-04-03  Wade Berrier  <wberrier@novell.com>

	* configure.in: add checking for headers as configured by
	apu-config.  It's possible to have libapr headers in a different
	location than libapr-util headers. (happens on suse 10.1)

2007-03-29  Miguel de Icaza  <miguel@novell.com>

	* src/mod_mono.c (do_command.GET_CLIENT_BLOCK): If we get a -1
	from ap_get_client_block, send that value but not any further
	data.   There is now a guard in xsp for this condition.

2007-03-28  Marek Habersack  <grendello@gmail.com>

	* src/mod_mono.c (do_command): abort when either xsp sends us size
	of -1 in the GET_CLIENT_BLOCK command or when ap_get_client_block
	returns -1 as the result of client breaking the connection. This
	action prevents an exception later on in xsp.

2006-11-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c:
	* ChangeLog: revert r66281 and r66836. It should make mod_mono work
	again for most of the people, while it will break for certain virtual
	host configurations.

2006-11-02  Wade Berrier  <wberrier@novell.com>

	* configure.in: bump version -> 1.2

2006-10-26  Marek Habersack  <grendello@gmail.com>

	* man/mod_mono.8.in: describe the new MonoUnixUmask directive.
	* src/mod_mono.c: add code to handle the new configurable umask
	directive.

2006-10-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>
